<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/navigation_bar_item_active_indicator_view"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginBottom="48sp"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/navbar"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:layout_marginBottom="40sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/userImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/fotoUsuario"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/username"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/name"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/age"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/email"
                android:textSize="14sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/blue"
        android:text="@string/gerarUsuario"
        android:textColorHighlight="#CABBBB"
        app:cornerRadius="8sp" />

    <TextView
        android:id="@+id/placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18sp"
        android:gravity="center"
        android:text="@string/placeholderText"
        android:textColor="@color/gray" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:clickable="true"
        android:onClick="navigateToHome"
        app:srcCompat="?attr/homeAsUpIndicator"
        android:contentDescription="@string/botaoVoltar"
        android:focusable="true" />


</LinearLayout>